# devops

./: .gitignore
dev-envs/all-in-one/: Containerfile  build-image.sh  image-name.txt  kill-container.sh
dev-envs/citrix-toolbox/: Containerfile  citrix.sh  create-container.sh  image-name.txt
dev-envs/dev-images-base/: Containerfile  Containerfile-arm
dev-envs/dev-images-base-arm/: Containerfile  image-name.txt  init.sh
dev-envs/docker-toolbox/: Containerfile  build-image.sh  docker-toolbox-init.sh  kill-container.sh
dev-envs/docker-windows/: docker-compose.yaml
dev-envs/fedora-toolbox-etherium/: Containerfile  build-image.sh  create-container.sh
dev-envs/flutter-toolbox/: Containerfile  init.sh
dev-envs/idea-toolbox/: Containerfile  idea.sh  rebuild-run.sh
dev-envs/jhipster-toolbox/: Containerfile
dev-envs/local-fedora-silverblue-dev/: bashrc.txt  post-setup.sh  setups.sh  sshtunnel.service  xrdp.ini
dev-envs/ml-toolbox/: Containerfile
dev-envs/scripts/: build-image.sh  create-container.sh  kill-container.sh  links.sh  rebuild-run.sh  refresh-container.sh
dev-envs/ssh-toolbox/: Containerfile
dev-envs/toolbox-base/: Containerfile  image-name.txt
dev-envs/toolboxkit/: Containerfile-Begin  Containerfile-End
gradle-projects/: settings.gradle.kts
gradle-projects/init/: pre-build.sh
linux-setups/centos8/: centos8-xrdp-setup.txt  init-centos8.txt
linux-setups/fedora37/: setup.sh  (+1 more)
vscode-dev-containers/python-conda-poetry/my-project/: README.md  pyproject.toml
vscode-dev-containers/python-conda-poetry/my-project/my-folder/: pyproject.toml
(+78 files in other folders)
