[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Mehmet Sunkur <mehmetsunkur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
my_package = { path = "./my-folder", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^ 8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
